# dsci-310-example-project

./: README.md
milestone-1/: README.md  (+1 more)
milestone-2/: README.md  pyproject.toml
milestone-2/docs/_build/doctrees/: contributing.doctree
milestone-2/docs/_build/doctrees/autoapi/airbnb_prediction/plotting/: index.doctree
milestone-2/docs/_build/doctrees/nbsphinx/: usage.ipynb
milestone-2/docs/_build/html/: genindex.html  index.html  installation.html
milestone-2/docs/_build/html/_sources/autoapi/airbnb_prediction/: index.rst.txt
milestone-2/docs/_build/html/autoapi/airbnb_prediction/: index.html
milestone-2/docs/source/: index.rst
milestone-2/src/airbnb_prediction/: __init__.py
milestones/milestone-2/: CONTRIBUTING.rst  README.md  pyproject.toml
milestones/milestone-2/docs/: Makefile  make.bat
milestones/milestone-2/docs/_build/doctrees/: conduct.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
milestones/milestone-2/docs/_build/doctrees/autoapi/: index.doctree
milestones/milestone-2/docs/_build/doctrees/nbsphinx/: usage.ipynb
milestones/milestone-2/docs/_build/html/: contributing.html  installation.html  objects.inv  py-modindex.html  searchindex.js  usage.html
milestones/milestone-2/docs/_build/html/_modules/: index.html
milestones/milestone-2/docs/_build/html/_sources/: installation.rst.txt  usage.ipynb.txt
milestones/milestone-2/docs/_build/html/autoapi/: index.html
milestones/milestone-2/docs/source/: index.rst  installation.rst
milestones/milestone-2/src/airbnb_prediction/: analysis.py  plotting.py
(+74 files in other folders)
