[tool.poetry]
name = "airbnb_prediction"
version = "0.1.0"
description = "A package for r predicting Airbnb property prices in Vancouver."
authors = ["Tomas Beuzen"]
license = "Creative Commons Attribution 4.0"
readme = "README.md"
documentation = "https://airbnb_prediction.readthedocs.io/en/latest/"
homepage = "https://github.com/TomasBeuzen/airbnb_prediction"
repository = "https://github.com/TomasBeuzen/airbnb_prediction"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
